@@ -6,6 +6,7 @@ Version 2010
     "nitpick_ind_intro" to "nitpick_intro"
   * Replaced "special_depth" and "skolemize_depth" options by "specialize"
     and "skolemize"
+  * Renamed "coalesce_type_vars" to "merge_type_vars"
   * Fixed monotonicity check
 
 Version 1.2.2 (16 Oct 2009)
